--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,6 +1,6 @@
 # If your site is in 'https', then make sure your base url isn't written using 'http' otherwise your sitemap would
 # contain http (as opposeed to https) URLs. This would affect Google indexing of your URLs.
-baseURL: "http://sikunxu.com/blog/"
+baseURL: "sikunxu.com/blog/"
 title: Sikun's Blog
 copyright: "©2024 [Sikun Xu](https://sikunxu.com/)"
 paginate: 5
